--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,56 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+asttokens==2.1.0
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
+blinker==1.5
+brotlipy==0.7.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+cryptography==38.0.3
+debugpy==1.6.3
+decorator==5.1.1
+entrypoints==0.4
+executing==1.2.0
+idna==3.4
+ipykernel==6.17.1
+ipython==8.6.0
+jedi==0.18.1
+jupyter_client==7.4.5
+jupyter_core==5.0.0
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
+numpy==1.23.4
+oauthlib==3.2.2
+packaging==21.3
+pandas==1.5.1
+parso==0.8.3
+pickleshare==0.7.5
+pip==22.3.1
+platformdirs==2.5.2
+prompt-toolkit==3.0.32
+psutil==5.9.4
+pure-eval==0.2.2
+pycparser==2.21
+Pygments==2.13.0
+PyJWT==2.6.0
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==0.21.0
+pytz==2022.6
+pyzmq==24.0.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+setuptools==65.5.1
+six==1.16.0
+stack-data==0.6.1
+tornado==6.2
+traitlets==5.5.0
+tweepy==4.12.1
+urllib3==1.26.11
+wcwidth==0.2.5
+wheel==0.38.4
+win-inet-pton==1.1.0
